styles.css
/*
hsla(132, 5%, 95%, 1);
hsla(148, 5%, 90%, 1);

#DCDCDE
#202020

#1E1717
#F4D9B6
*/

* {
  margin: 0;
  padding: 0;
}

html, body {
  width: 100%;
  height: 100%;
}

html {
  background-color: white;
  color: black;
  font-size: 24px;
  font-family: 'GT Sectra Trial', sans-serif;
}

body {
  counter-reset: index;
  line-height: 1.4;
  max-width: 700px;
  margin: auto;
  padding: 0 1rem;
  font-weight: 300;
}

section {
  padding: 8rem 0;
}

h1, h2, h3 {
  text-transform: uppercase;
  text-align: center;
  letter-spacing: 2px;
  font-weight: 300;
  margin: 1rem 0;
}

h1 {
  font-size: 1.7rem;
}

h2 {
  font-size: 1.2rem;
}

h3 {
  font-size: 1rem;
}

hr {
  height: 0;
  border-style: none;
  border-bottom: solid 1px rgba(0, 0, 0, 0.5);
}

p {
  margin-bottom: 1rem;
}

a {
  color: black;
  text-decoration: none;
}

.cover {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  text-align: center;

  height: 100vh;
  padding: 0;
}

.poem {
  position: relative;
}

.poem-title {
  width: 100%;
  padding-top: 1rem;
  padding-bottom: 3rem;
  margin: 0;
  background-image: linear-gradient(white 60%, transparent 100%);
}

.poem-content {
  white-space: nowrap;
  overflow: visible;
}

.poem::before {
  display: block;
  text-align: center;
  counter-increment: index;
  content: counter(index);
}



/* STICKY CONTAINER */

.sticky-container {
  position: relative;
}

.sticky-element {
  position: fixed;
  top: 0;
  left: 0;
  bottom: auto;
  right: auto;
}

.sticky-element.is-position-start {
  position: absolute;
  top: 0;
  bottom: auto;
}

.sticky-element.is-position-end {
  position: absolute;
  top: auto;
  bottom: 0;
}

